// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when closed 1`] = `
<div
  className="jOkOCo"
>
  I am closed
</div>
`;

exports[`renders correctly when open 1`] = `
<div
  className="modal-open jOkOCo"
>
  I am open
</div>
`;
